functionalize rxnorm update

--- a/terminology/medispan/ahf.ipynb
+++ b/terminology/medispan/ahf.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff843000f0>"
+       "<duckdb.DuckDBPyConnection at 0xffffa461f770>"
       ]
      },
      "execution_count": 3,
@@ -137,7 +137,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/AHF/USAENG/DB/FIXED/AHFCON', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/AHF/USAENG/DB/FIXED/AHFCON', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -280,7 +280,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/AHF/USAENG/DB/FIXED/AHFDESC', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/AHF/USAENG/DB/FIXED/AHFDESC', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -453,7 +453,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/AHF/USAENG/DB/FIXED/AHFDICT', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/AHF/USAENG/DB/FIXED/AHFDICT', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -613,7 +613,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/AHF/USAENG/DB/FIXED/AHFDRUG', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/AHF/USAENG/DB/FIXED/AHFDRUG', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -762,7 +762,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/AHF/USAENG/DB/FIXED/AHFVAL', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/AHF/USAENG/DB/FIXED/AHFVAL', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
