--- a/terminology/medispan/atcmap.ipynb
+++ b/terminology/medispan/atcmap.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff7572cdf0>"
+       "<duckdb.DuckDBPyConnection at 0xffff7c43c6b0>"
       ]
      },
      "execution_count": 3,
@@ -130,7 +130,7 @@
     "''')\n",
     "\n",
     "con.execute('''\n",
-    "    copy medispan.ATCDESC from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ATCMAP/DATA/OUTPUT/TOTAL/ATCDESC'(\n",
+    "    copy medispan.ATCDESC from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ATCMAP/DATA/OUTPUT/TOTAL/ATCDESC'(\n",
     "        delimiter '|',\n",
     "        header 'false'\n",
     "    )\n",
@@ -264,7 +264,7 @@
     "''')\n",
     "\n",
     "con.execute('''\n",
-    "    copy medispan.ATCDICT from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ATCMAP/DATA/OUTPUT/TOTAL/ATCDICT'(\n",
+    "    copy medispan.ATCDICT from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ATCMAP/DATA/OUTPUT/TOTAL/ATCDICT'(\n",
     "        delimiter '|',\n",
     "        header 'false'\n",
     "    )\n",
@@ -363,7 +363,7 @@
     "''')\n",
     "\n",
     "con.execute('''\n",
-    "    copy medispan.ATCHIER from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ATCMAP/DATA/OUTPUT/TOTAL/ATCHIER'(\n",
+    "    copy medispan.ATCHIER from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ATCMAP/DATA/OUTPUT/TOTAL/ATCHIER'(\n",
     "        delimiter '|',\n",
     "        header 'false'\n",
     "    )\n",
@@ -483,7 +483,7 @@
     "''')\n",
     "\n",
     "con.execute('''\n",
-    "    copy medispan.ATCMAP from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ATCMAP/DATA/OUTPUT/TOTAL/ATCMAP'(\n",
+    "    copy medispan.ATCMAP from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ATCMAP/DATA/OUTPUT/TOTAL/ATCMAP'(\n",
     "        delimiter '|',\n",
     "        header 'false'\n",
     "    )\n",
@@ -596,7 +596,7 @@
     "''')\n",
     "\n",
     "con.execute('''\n",
-    "    copy medispan.ATCVAL from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ATCMAP/DATA/OUTPUT/TOTAL/ATCVAL'(\n",
+    "    copy medispan.ATCVAL from '/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ATCMAP/DATA/OUTPUT/TOTAL/ATCVAL'(\n",
     "        delimiter '|',\n",
     "        header 'false'\n",
     "    )\n",
