--- a/terminology/medispan/dda.ipynb
+++ b/terminology/medispan/dda.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff7c579cb0>"
+       "<duckdb.DuckDBPyConnection at 0xffff5365f1b0>"
       ]
      },
      "execution_count": 3,
@@ -151,7 +151,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/DDA/USAENG/DB/DDAAUOM', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/DDA/USAENG/DB/DDAAUOM', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -324,7 +324,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/DDA/USAENG/DB/DDADICT', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/DDA/USAENG/DB/DDADICT', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -629,7 +629,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/DDA/USAENG/DB/DDADOSE', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/DDA/USAENG/DB/DDADOSE', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -964,7 +964,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/DDA/USAENG/DB/DDADPP', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/DDA/USAENG/DB/DDADPP', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1131,7 +1131,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/DDA/USAENG/DB/DDAUOM', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/DDA/USAENG/DB/DDAUOM', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1284,7 +1284,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/DDA/USAENG/DB/DDAVAL', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/DDA/USAENG/DB/DDAVAL', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
