--- a/terminology/medispan/mcm.ipynb
+++ b/terminology/medispan/mcm.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff3081f1b0>"
+       "<duckdb.DuckDBPyConnection at 0xffff9c2522b0>"
       ]
      },
      "execution_count": 3,
@@ -165,7 +165,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ICD10/USAENG/DB/FIXED/MIXI10', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ICD10/USAENG/DB/FIXED/MIXI10', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -327,7 +327,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/ICD10/USAENG/DB/FIXED/MIXMMAP', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/ICD10/USAENG/DB/FIXED/MIXMMAP', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -470,7 +470,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMCLASS', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMCLASS', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -665,7 +665,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMCOND', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMCOND', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -853,7 +853,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMDICT', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMDICT', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -986,7 +986,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMINM', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMINM', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1144,7 +1144,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMMDDS', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMMDDS', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1301,7 +1301,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMMICD', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMMICD', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1442,7 +1442,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMMSCT', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMMSCT', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1595,7 +1595,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMNAME', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMNAME', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1745,7 +1745,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/MCM/USAENG/DB/MCMVAL', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/MCM/USAENG/DB/MCMVAL', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
