--- a/terminology/rxnorm_check.ipynb
+++ b/terminology/rxnorm_check.ipynb
@@ -6,9 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import duckdb\n",
-    "import pandas as pd\n",
-    "import csv"
+    "import duckdb"
    ]
   },
   {
@@ -29,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff8025f0b0>"
+       "<duckdb.DuckDBPyConnection at 0xffff913b2b70>"
       ]
      },
      "execution_count": 3,
@@ -214,35 +212,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXATOMARCHIVE(\n",
-    "        RXAUI             varchar(8) NOT NULL,\n",
-    "        AUI               varchar(10),\n",
-    "        STR               varchar(4000) NOT NULL,\n",
-    "        ARCHIVE_TIMESTAMP varchar(280) NOT NULL,\n",
-    "        CREATED_TIMESTAMP varchar(280) NOT NULL,\n",
-    "        UPDATED_TIMESTAMP varchar(280) NOT NULL,\n",
-    "        CODE              varchar(50),\n",
-    "        IS_BRAND          varchar(1),\n",
-    "        LAT               varchar(3),\n",
-    "        LAST_RELEASED     varchar(30),\n",
-    "        SAUI              varchar(50),\n",
-    "        VSAB              varchar(40),\n",
-    "        RXCUI             varchar(8),\n",
-    "        SAB               varchar(20),\n",
-    "        TTY               varchar(20),\n",
-    "        MERGED_TO_RXCUI   varchar(8)\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXATOMARCHIVE from '/workspaces/practice/terminology/rrf/RXNATOMARCHIVE.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXATOMARCHIVE table\n",
     "con.execute('select * from RXNORM.RXATOMARCHIVE limit 5').fetchdf()"
    ]
   },
@@ -251,20 +220,6 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "19c7fb0481e1491d9c2f72bb7c5f62a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, layout=Layout(width='100%'), style=ProgressStyle(bar_color='black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -445,37 +400,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXNCONSO(\n",
-    "        RXCUI             varchar(8) NOT NULL,\n",
-    "        LAT               varchar (3) NOT NULL,\n",
-    "        TS                varchar (1),\n",
-    "        LUI               varchar(8),\n",
-    "        STT               varchar (3),\n",
-    "        SUI               varchar (8),\n",
-    "        ISPREF            varchar (1),\n",
-    "        RXAUI             varchar(8) NOT NULL,\n",
-    "        SAUI              varchar (50),\n",
-    "        SCUI              varchar (50),\n",
-    "        SDUI              varchar (50),\n",
-    "        SAB               varchar (20) NOT NULL,\n",
-    "        TTY               varchar (20) NOT NULL,\n",
-    "        CODE              varchar (50) NOT NULL,\n",
-    "        STR               varchar (3000) NOT NULL,\n",
-    "        SRL               varchar (10),\n",
-    "        SUPPRESS          varchar (1),\n",
-    "        CVF               varchar(50)\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXNCONSO from '/workspaces/practice/terminology/rrf/RXNCONSO.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXNCONSO table\n",
     "con.execute('select * from RXNORM.RXNCONSO limit 5').fetchdf()"
    ]
   },
@@ -645,24 +569,6 @@
     }
    ],
    "source": [
-    "cols = ['RXCUI1', 'RXAUI1', 'STYPE1', 'REL', 'RXCUI2', 'RXAUI2', 'STYPE2', 'RELA', 'RUI', 'SRUI', 'SAB', 'SL', 'RG', 'DIR', 'SUPPRESS', 'CVF', 'extra']\n",
-    "\n",
-    "with open('/workspaces/practice/terminology/rrf/RXNREL.RRF', 'r') as f:\n",
-    "    reader = csv.reader(f, delimiter='|')\n",
-    "    header = next(reader)\n",
-    "    data = [row for row in reader]\n",
-    "\n",
-    "# convert data to a pandas dataframe named RXNREL with the columns from header\n",
-    "RXNREL = pd.DataFrame(data)\n",
-    "\n",
-    "# set the column names of RXNREL to cols\n",
-    "RXNREL.columns = cols\n",
-    "\n",
-    "# drop the extra column\n",
-    "RXNREL.drop('extra', axis=1, inplace=True)\n",
-    "\n",
-    "con.execute('create or replace table RXNORM.RXNREL as select * from RXNREL')\n",
-    "\n",
     "con.execute('select * from RXNORM.RXNREL limit 5').fetchdf()"
    ]
   },
@@ -900,44 +806,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXNSAB(\n",
-    "        VCUI           varchar (8),\n",
-    "        RCUI           varchar (8),\n",
-    "        VSAB           varchar (40),\n",
-    "        RSAB           varchar (20) NOT NULL,\n",
-    "        SON            varchar (3000),\n",
-    "        SF             varchar (20),\n",
-    "        SVER           varchar (20),\n",
-    "        VSTART         varchar (10),\n",
-    "        VEND           varchar (10),\n",
-    "        IMETA          varchar (10),\n",
-    "        RMETA          varchar (10),\n",
-    "        SLC            varchar (1000),\n",
-    "        SCC            varchar (1000),\n",
-    "        SRL            integer,\n",
-    "        TFR            integer,\n",
-    "        CFR            integer,\n",
-    "        CXTY           varchar (50),\n",
-    "        TTYL           varchar (300),\n",
-    "        ATNL           varchar (1000),\n",
-    "        LAT            varchar (3),\n",
-    "        CENC           varchar (20),\n",
-    "        CURVER         varchar (1),\n",
-    "        SABIN          varchar (1),\n",
-    "        SSN            varchar (3000),\n",
-    "        SCIT           varchar (4000)\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXNSAB from '/workspaces/practice/terminology/rrf/RXNSAB.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXNSAB table\n",
     "con.execute('select * from RXNORM.RXNSAB limit 5').fetchdf()"
    ]
   },
@@ -1089,24 +957,6 @@
     }
    ],
    "source": [
-    "cols = ['RXCUI', 'LUI', 'SUI', 'RXAUI', 'STYPE', 'CODE', 'ATUI', 'SATUI', 'ATN', 'SAB', 'ATV', 'SUPPRESS', 'CVF', 'extra']\n",
-    "\n",
-    "with open('/workspaces/practice/terminology/rrf/RXNSAT.RRF', 'r') as f:\n",
-    "    reader = csv.reader(f, delimiter='|')\n",
-    "    header = next(reader)\n",
-    "    data = [row for row in reader]\n",
-    "    \n",
-    "# convert data to a pandas dataframe named RXNSAT with the columns from header\n",
-    "RXNSAT = pd.DataFrame(data)\n",
-    "\n",
-    "# set the column names of RXNSAT to cols\n",
-    "RXNSAT.columns = cols\n",
-    "\n",
-    "# drop the extra column\n",
-    "RXNSAT.drop('extra', axis=1, inplace=True)\n",
-    "\n",
-    "con.execute('create or replace table RXNORM.RXNSAT as select * from RXNSAT')\n",
-    "\n",
     "con.execute('select * from RXNORM.RXNSAT limit 5').fetchdf()"
    ]
   },
@@ -1209,25 +1059,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXNSTY(\n",
-    "        RXCUI          varchar(8) NOT NULL,\n",
-    "        TUI            varchar (4),\n",
-    "        STN            varchar (100),\n",
-    "        STY            varchar (50),\n",
-    "        ATUI           varchar (11),\n",
-    "        CVF            varchar (50)\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXNSTY from '/workspaces/practice/terminology/rrf/RXNSTY.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXNSTY table\n",
     "con.execute('select * from RXNORM.RXNSTY limit 5').fetchdf()"
    ]
   },
@@ -1325,23 +1156,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXNDOC(\n",
-    "        DOCKEY      varchar(50) NOT NULL,\n",
-    "        VALUE       varchar(1000),\n",
-    "        TYPE        varchar(50) NOT NULL,\n",
-    "        EXPL        varchar(1000)\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXNDOC from '/workspaces/practice/terminology/rrf/RXNDOC.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXNDOC table\n",
     "con.execute('select * from RXNORM.RXNDOC limit 5').fetchdf()"
    ]
   },
@@ -1457,26 +1271,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXNCUICHANGES(\n",
-    "        RXAUI         varchar(8),\n",
-    "        CODE          varchar(50),\n",
-    "        SAB           varchar(20),\n",
-    "        TTY           varchar(20),\n",
-    "        STR           varchar(3000),\n",
-    "        OLD_RXCUI     varchar(8) NOT NULL,\n",
-    "        NEW_RXCUI     varchar(8) NOT NULL\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXNCUICHANGES from '/workspaces/practice/terminology/rrf/RXNCUICHANGES.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXNCUICHANGES table\n",
     "con.execute('select * from RXNORM.RXNCUICHANGES limit 5').fetchdf()"
    ]
   },
@@ -1573,24 +1367,6 @@
     }
    ],
    "source": [
-    "con.execute('''\n",
-    "    create or replace table RXNORM.RXNCUI(\n",
-    "        cui1 VARCHAR(8),\n",
-    "        ver_start VARCHAR(40),\n",
-    "        ver_end   VARCHAR(40),\n",
-    "        cardinality VARCHAR(8),\n",
-    "        cui2       VARCHAR(8) \n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "con.execute('''\n",
-    "    copy RXNORM.RXNCUI from '/workspaces/practice/terminology/rrf/RXNCUI.RRF'(\n",
-    "        delimiter '|',\n",
-    "        header 'false'\n",
-    "    )\n",
-    "''')\n",
-    "\n",
-    "# show first 5 rows of RXNCUI table\n",
     "con.execute('select * from RXNORM.RXNCUI limit 5').fetchdf()"
    ]
   },
