--- a/terminology/medispan/rxx.ipynb
+++ b/terminology/medispan/rxx.ipynb
@@ -27,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff5374a470>"
+       "<duckdb.DuckDBPyConnection at 0xffff3aeab3f0>"
       ]
      },
      "execution_count": 3,
@@ -144,7 +144,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXCNCPT', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXCNCPT', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -316,7 +316,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXDICT', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXDICT', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -483,7 +483,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXEXCON', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXEXCON', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -642,7 +642,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXVAL', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXVAL', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -788,7 +788,7 @@
     ")\n",
     "\"\"\")\n",
     "\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXVRDSC', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXVRDSC', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "for line in lines:\n",
@@ -952,7 +952,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXXREF', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXXREF', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
@@ -1133,7 +1133,7 @@
     "\"\"\")\n",
     "\n",
     "# Open the file and read its content\n",
-    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230201/RXX/USAENG/DB/FIXED/RXXXVAR', 'r') as file:\n",
+    "with open('/workspaces/practice/terminology/medispan/CD148480D_MO_20230301/RXX/USAENG/DB/FIXED/RXXXVAR', 'r') as file:\n",
     "    lines = file.readlines()\n",
     "\n",
     "# Loop through each line and extract the fields\n",
