created metathesaurus file to automate update

--- a/terminology/metathesaurus_check.ipynb
+++ b/terminology/metathesaurus_check.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "<duckdb.DuckDBPyConnection at 0xffff31ac69f0>"
+       "<duckdb.DuckDBPyConnection at 0xffff32a2b4b0>"
       ]
      },
      "execution_count": 3,
@@ -45,20 +45,6 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e8b1f97329a4f82af3cec474c5d53b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatProgress(value=0.0, layout=Layout(width='100%'), style=ProgressStyle(bar_color='black'))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -479,14 +465,6 @@
     }
    ],
    "source": [
-    "# use pandas to read the csv file\n",
-    "MRCONSO = pd.read_csv('/workspaces/practice/terminology/MRCONSO.RRF', sep='|', header=None, names=['CUI', 'LAT', 'TS', 'LUI', 'STT', 'SUI', 'ISPREF', 'AUI', 'SAUI', 'SCUI', 'SDUI', 'SAB', 'TTY', 'CODE', 'STR', 'SRL', 'SUPPRESS', 'CVF', 'RESERVE'], dtype={\"SCUI\": str, \"SDUI\": str, \"CODE\": str})\n",
-    "\n",
-    "MRCONSO = MRCONSO.drop(columns=['RESERVE'])\n",
-    "\n",
-    "con.execute('create or replace table METATHESAURUS.MRCONSO as select * from MRCONSO')\n",
-    "\n",
-    "# show first 5 rows of RXATOMARCHIVE table\n",
     "con.execute('select * from METATHESAURUS.MRCONSO limit 15').fetchdf()"
    ]
   },
